# asl_detection

./: .gitignore  README.md  TODO.md  pyproject.toml  run.sh  train_model.sh
notebooks/: 01-es-initial-data-exploration.ipynb
src/: data_loader.py  models.py  train.py
src/detection/: capture.py
src/model/: asl_baseline.pt  data_loader.py  torch_models.py  train.py
src/models/: data_loader.py  train_model.py
