[build-system]
requires = [
    "setuptools >= 65", 
    "wheel >= 0.38",
    "setuptools-scm"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "gram2vec"
version = "1.0.0"
description=""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
#urls = {source = ""}
dependencies = [
    "numpy",
    "pandas", 
    "torch",
    "torchvision",
    "torchaudio",
    "opencv-python"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",        
    "Programming Language :: Python :: 3.10",
    ]